--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,7 @@
       <span class="text-center w-100">
       <h3>Some History</h3>
         </span>
-      <div class="col-md-12">
+      <div class="col-md-6">
         <p>
           Hi, I’m Jonas Karlsson, a Solution architect and developer from Gothenburg, Sweden.
         </p>
@@ -22,7 +22,11 @@
         <p>
           This means > 10
           years of experience as a developer and Solution Architect.
-          Go to the <a routerLink="/about" fragment="westc-footer" class="westc-blue-text">bottom</a> of the page for contact information.</p>
+          Go to the <a routerLink="/about" fragment="westc-footer" class="westc-blue-text">bottom</a> of the page for
+          contact information.</p>
+      </div>
+      <div class="col-md-6 align-self-center text-center p-5">
+        <img src="../../assets/logos/short_logo.png" class="img-fluid logo-image">
       </div>
     </div>
   </div>
@@ -32,9 +36,12 @@
   <div class="container">
     <div class="row">
       <span class="text-center w-100">
-      <h3>Personal Characteristics</h3>
-        </span>
-      <div class="col-md-12">
+          <h3>Characteristics</h3>
+      </span>
+      <div class="col-md-6 align-self-center text-center">
+        <img src="../../assets/jonas.png" class="img-fluid jonas-image">
+        </div>
+      <div class="col-md-6">
         <p>
           I enjoy booth frontend and backend technologies and test driven development in a continuous delivery manner
           are fundamentals for me.
@@ -58,17 +65,29 @@
       <span class="text-center w-100">
       <h3>References</h3>
         </span>
-      <div class="col-md-12">
+      <div class="col-md-6">
         <p>
           During my years at Capgemini, all my external assignments rated by the customer through a Customer
-          Satisfaction Index (CSI) survey. During the years, the majority of the feedback has extremely positive.
+          Satisfaction Index (CSI) survey. During the years, all the feedback has been extremely positive.
         </p>
-        <p>
+      </div>
+      <div class="col-md-6">
+        <div class="pt-md-5 text-right">
+          <small>
+          <span class="font-italic">
+          <p>
           "Jonas deep knowledge made him the backbone of all development in the project. As a senior he also assisted
-          and helped other developers in the team.
-          As a PM I relied on Jonas in technical discussions and found him very competent and experienced. A Solution
-          Architect to trust and rely on."
-        </p>
+          and helped other developers in the team.</p>
+          <p>
+          As a PM I relied on Jonas in technical discussions and found him very competent and experienced.
+          </p>
+          <p>
+            A Solution Architect to trust and rely on."
+          </p>
+        </span>
+            <p>- Project Manager, 2017</p>
+          </small>
+        </div>
       </div>
     </div>
   </div>
