--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row">
       <span class="text-center w-100">
-      <h3>Different roles I had</h3>
+      <h3>Roles</h3>
         </span>
       <div class="col-md-12">
         <h4>Solution Architect</h4>
@@ -17,7 +17,7 @@
         </p>
         <ul>
           <li>
-            E2E a responsibility for a solution
+            Technical E2E a responsibility for a solution
           </li>
           <li>
             Leadership in distributed teams sitting around the world with an international Customer acting in many
@@ -54,8 +54,8 @@
   <div class="container">
     <div class="row">
       <span class="text-center w-100">
-      <h3>Selection areas I recently worked with</h3>
-        </span>
+        <h3>Recent stack</h3>
+      </span>
       <div class="col-md-4">
         <h4>Backend</h4>
         <ul>
