--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -35,21 +35,21 @@
       </div>
     </div>
   </div>
-  </section>
+</section>
 <section class="has-padding">
-<div class="container">
-  <div class="row clickable" (click)="routeTo('about')">
-    <div class="col-6 col-lg-6">
-      <div class="pt-md-5">
-        <h2 class="quoted-heading text-right font-italic">"A Solution Architect to trust and rely on"
-        </h2>
-        <p class="text-right">- Project Manager</p>
+  <div class="container">
+    <div class="row clickable" (click)="routeTo('about')">
+      <div class="col-6 col-lg-6">
+        <div class="pt-md-5 text-right">
+        <span class="quoted-heading font-italic">"A Solution Architect to trust and rely on"
+        </span>
+          <p>- Project Manager</p>
+        </div>
+      </div>
+      <div class="col-6 col-lg-6 align-self-center">
+        <img class="featurette-image img-fluid mx-auto jonas-image" src="../../assets/500X500/jonas.png"
+             alt="Jonas image">
       </div>
     </div>
-    <div class="col-6 col-lg-6">
-      <img class="featurette-image img-fluid mx-auto" src="../../assets/500X500/jonas.png"
-           alt="Jonas image">
-    </div>
   </div>
-</div>
 </section>
