--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,10 +1,18 @@
 @import "../styles/variables.scss";
-@import "../styles/fade-in.scss";
 
 .teaser {
-  font-size: 30px;
+  font-size: 16px;
   line-height: 28px;
 }
 
+@media only screen and (min-width: 500px) {
+  .teaser {
+    font-size: 30px;
+  }
+}
 
+.jonas-image {
+  max-height: 300px;
+  padding-bottom: 40px;
+}
 
