--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -96,19 +96,22 @@
             Angular 4
           </li>
           <li>
-            Bootstrap 4
-          </li>
-          <li>
             JavaScript (ES6) / TypeScript
           </li>
           <li>
             HTML5
           </li>
           <li>
+            Bootstrap 4
+          </li>
+          <li>
             CSS3 / SCSS
           </li>
           <li>
             UI / UX
+          </li>
+          <li>
+            Selenium
           </li>
           <li>
             Responsive design
