--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center has-padding">
-        <img src="/assets/logos/short_logo.png" class="footer-logo" alt="westc">
+        <img src="/assets/logos/westc.png" class="footer-logo" alt="westc">
         <ul>
           <li><a href="mailto:jonas@westc.se">Email</a></li>
           <li><a href="https://www.linkedin.com/in/jonas-karlsson-14b231a/">LinkedIn</a></li>
