--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,12 +11,16 @@
       <span class="text-center w-100">
       <h3>Some History</h3>
         </span>
-      <div class="col-md-6">
+      <div class="col-md-3 align-self-center text-center">
+        <img src="../../assets/logos/westc-circle.png" class="img-fluid logo-image">
+      </div>
+      <div class="col-md-9">
         <p>
           Hi, I’m Jonas Karlsson, a Solution architect and developer from Gothenburg, Sweden.
         </p>
         <p>
-          I started West Consulting, or westc, in June 2017. My IT career started at WM-data (Logica -> CGI) at 2005 and
+          I started West Consulting, or westc, in June 2017. My IT career started at WM-data and later on Logica (now
+          called CGI) at 2005 and
           after 4 years I moved to Capgemini and stayed there for 8 years after starting my own business.
         </p>
         <p>
@@ -24,9 +28,6 @@
           years of experience as a developer and Solution Architect.
           Go to the <a routerLink="/about" fragment="westc-footer" class="westc-blue-text">bottom</a> of the page for
           contact information.</p>
-      </div>
-      <div class="col-md-6 align-self-center text-center p-5">
-        <img src="../../assets/logos/short_logo.png" class="img-fluid logo-image">
       </div>
     </div>
   </div>
@@ -38,9 +39,6 @@
       <span class="text-center w-100">
           <h3>Characteristics</h3>
       </span>
-      <div class="col-md-6 align-self-center text-center">
-        <img src="../../assets/jonas.png" class="img-fluid jonas-image">
-        </div>
       <div class="col-md-6">
         <p>
           I enjoy booth frontend and backend technologies and test driven development in a continuous delivery manner
@@ -55,6 +53,9 @@
           Independently of what technology or what type of system I’m involved in building, I always have great customer
           focus on what should be delivered.</p>
       </div>
+      <div class="col-md-6 align-self-center text-center">
+        <img src="../../assets/jonas.png" class="img-fluid jonas-image">
+      </div>
     </div>
   </div>
 </section>
@@ -67,12 +68,14 @@
         </span>
       <div class="col-md-6">
         <p>
-          During my years at Capgemini, all my external assignments rated by the customer through a Customer
+          During my years at Capgemini, all my external assignments were rated by the customer through a Customer
           Satisfaction Index (CSI) survey. During the years, all the feedback has been extremely positive.
         </p>
-      </div>
+        <p>
+          After one of my assignments during 2017, the project manager gave me the following evaluation:
+        </p>
+        </div>
       <div class="col-md-6">
-        <div class="pt-md-5 text-right">
           <small>
           <span class="font-italic">
           <p>
@@ -85,9 +88,7 @@
             A Solution Architect to trust and rely on."
           </p>
         </span>
-            <p>- Project Manager, 2017</p>
           </small>
-        </div>
       </div>
     </div>
   </div>
