--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,5 +4,8 @@
 }
 
 .logo-image {
-  padding: 20px;
+  max-width: 250px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 30px;
 }
