--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -94,8 +94,8 @@
   </div>
 </section>
 
-<section class="has-padding sunny-background text-center clickable" (click)="routeTo('competences')">
-  <h2 class="featurette-heading westc-text-color">Find out what I can do in your business</h2>
+<section class="has-padding westc-black-background text-center clickable" (click)="routeTo('competences')">
+  <h2 class="featurette-heading text-white">Find out what I can do in your business</h2>
   <div class="call-to-action">
     <a routerLink="/competences"><span>Read more</span></a>
   </div>
