--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -58,7 +58,8 @@ html {
 }
 
 .westc-black-background {
-  background: $west-consulting-logo-grey;
+  //background: $west-consulting-logo-grey;
+  background: $west-consulting-blackish-background;
 }
 
 .westc-blue-background {
