--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -3,6 +3,8 @@ $west-consulting-blue-darker : #7294a6;
 $west-consulting-logo-grey : #949095;
 //$west-consulting-black-text-color : #4d4d4f;
 $west-consulting-black-text-color : #3F4D59;
+$west-consulting-blackish-background : #1c232c;
+
 //$west-consulting-black-text-color : #5F6D7E; //finlan
 $west-consulting-border-color : #979797;
 $west-consulting-sand: #F7E7C9;
