--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -72,7 +72,7 @@
           Satisfaction Index (CSI) survey. During the years, all the feedback has been extremely positive.
         </p>
         <p>
-          After one of my assignments during 2017, the project manager gave me the following evaluation:
+          After one of my latest assignments, the project manager gave me the following evaluation:
         </p>
         </div>
       <div class="col-md-6">
@@ -100,88 +100,3 @@
     <a routerLink="/competences"><span>Read more</span></a>
   </div>
 </section>
-
-<!--
-<div class="container-fluid westc-blue-background">
-  <div class="row">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 align-self-center text-center p-5">
-          <img src="../../assets/logos/short_logo_inverted.png" class="img-fluid">
-        </div>
-        <div class="col-md-6 text-black featurette  pt-5 pb-5">
-          <p>
-          <span class="introduction">
-            West IT Consulting AB was founded in June, 2017 by me, Jonas Karlsson. The idea behind the
-            company is to provide IT consulting services. The base for the company is in Gothenburg, Sweden.
-          </span>
-          </p>
-          <div class="row">
-            <div class="col-md-6">
-              <p>
-                I started to work in the IT business at WM-data (Logica -> CGI) at 2005 and after 4 years I moved to
-                Capgemini and stayed there for 8 years after starting my own business. This means I have > 10 years of
-                experience as a developer and Solution Architect.
-              </p>
-              <p>
-                I enjoy booth frontend and backend technologies and test driven development in a continuous delivery
-                manner are fundamentals for me.
-              </p>
-            </div>
-            <div class="col-md-6">
-
-              <p>
-                I prefer a role where I have time for coding but also to take responsibility in the overall solution,
-                including
-                tight communication with the customer, creating design proposals, giving estimates and even do the scrum
-                master
-                work.
-              </p>
-
-            </div>
-          </div>
-          <div class="row">
-            <h2>Why you should hire me</h2>
-            <p>
-              My main personal characteristics are my high ambition, loyalty and a pragmatic approach in designing
-              high quality solutions that are optimal for the customer.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container-fluid gbg-map">
-  <div class="row">
-    <div class="container">
-      <div id="contact" class="row">
-        <div class="col-6 featurette align-self-center pt-5 pb-5 white-box-with-shadow">
-          <p><span
-            class="introduction">Please contact me for more information</span>
-          </p>
-
-          E-mail: <a href="mailto:jonas@westc.se"><strong>jonas@westc.se</strong></a><br>
-          Phone: <strong>+46734481886</strong> <br>
-          <a href="https://www.linkedin.com/in/jonas-karlsson-14b231a/"><strong>LinkedIn profile</strong></a>
-        </div>
-        <div class="col-6 align-self-center text-center">
-          <img src="../../assets/jonas.png" class="img-fluid">
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-12 sunny-background text-center clickable" (click)="routeTo('competences')">
-    <h2 class="featurette-heading westc-text-color">Find out what I can do in your business</h2>
-    <div class="call-to-action">
-      <a routerLink="/competences"><span>Read more</span></a>
-    </div>
-  </div>
-
-
-</div>
--->
