--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -13,29 +13,34 @@
       <div class="col-md-12">
         <h4>Solution Architect</h4>
         <p>
-          When I've had this role it has included:
+          This is a role I'm really comfortable in and had in several projects. For me, a Solution Architect works
+          within the following areas:
         </p>
         <ul>
           <li>
-            Technical E2E a responsibility for a solution
+            Being the primary contact in technical discussions with the customer
           </li>
           <li>
-            Leadership in distributed teams sitting around the world with an international Customer acting in many
-            markets
+            Technical E2E responsibility for a solution, including both functional and non functional requirements.
+            It could be aligning a solution with the technical roadmap and to ensure agreed levels of performance, scalability
+            and SEO are fulfilled
           </li>
           <li>
-            High demands in terms of performance, scalability and SEO
+            Leadership in, potentially, distributed teams sitting around the world with an international Customer acting
+            in many markets
           </li>
           <li>
             Be a part of estimations and bidding for new functionality and new solutions
+          </li>
+          <li>
+            Coding and testing
           </li>
         </ul>
 
         <h4>Fullstack Web Developer</h4>
         <p>
-          Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular, Bootstrap
-          CSS and UX in general. And I’m naturally comfortable with the ecosystem surrounding these technologies like
-          Selenium/ProTractor, Jasmine, npm, grunt and Bower. Test driven mentality.
+          I have long experience in working as a pure developer booth in backend technologies and also in modern front
+          end technologies and I’m comfortable with the ecosystem surrounding these technologies.
         </p>
         <h4>Scrum master</h4>
         <p>
@@ -83,6 +88,9 @@
           <li>
             Oracle
           </li>
+          <li>
+            Gatling
+          </li>
         </ul>
       </div>
 
@@ -128,7 +136,7 @@
             Scrum / Kanban processes
           </li>
           <li>
-            AWS
+            Amazon Web Services (AWS)
           </li>
           <li>
             Docker
@@ -151,120 +159,6 @@
   </div>
 </section>
 
-<!--
-<div class="container-fluid sunny-background">
-  <div class="row">
-    <div class="container">
-      <div class="row pt-5">
-        <h1>Competences</h1>
-        <p>
-        <span class="introduction">
-          My experiences and competencies spreads across a wide range of the system development process, but can be divided into three main categories.
-        </span>
-        </p>
-      </div>
-      <div class="row">
-        <div class="col-md-4 text-black">
-          <h2 class="pt-3">Solution Architect</h2>When I've had this role it has included:
-          <ul>
-            <li>E2E a responsibility for a solution</li>
-            <li>Leadership in distributed teams sitting around the world with an international Customer acting in many
-              markets
-            </li>
-            <li>Be a part of estimations and bidding for new functionality</li>
-            <li>CMS Integrations</li>
-            <li>High demands in terms of performance, scalability and SEO</li>
-          </ul>
-        </div>
-        <div class="col-md-4 text-black">
-          <h2 class="pt-3">
-            Fullstack Web Developer</h2>
-          <p>
-            Skilled developer within front end technologies like Javascript, Typescript, NodeJs, HTML5, Angular,
-            Bootstrap
-            CSS and UX in general. And I’m naturally comfortable with the ecosystem surrounding these technologies like
-            Selenium/ProTractor, Jasmine, npm, grunt and Bower. Test driven mentality.
-          </p>
-        </div>
-        <div class="col-md-4 text-black">
-          <h2 class="pt-3">
-            Scrum master
-          </h2>
-          <p>
-            I’ve had the role as a scrum master and, most importantly, have long experience of working along with great
-            Scrum masters which given me a solid tool box for how agile scrum teams should be managed in the most
-            efficient.
-          <p>
-            This makes me a appropriate agile leader.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="container westc-blue-background text-white">
-          <div class="row pt-5">
-
-            <div class="col-md-8 p-5">
-              <h2>Customer focus and great commitment</h2>
-              <p>
-                <span class="introduction">That's my key characteristics</span></p>
-              <p>
-              <p>
-                Independently of what technology or what type of system I’m involved in building, I always have great
-                customer
-                focus on what should be delivered.
-              </p>
-              During my years at Capgemini, all my external assignments rated by the customer through a Customer
-              Satisfaction
-              Index (CSI) survey. During the five
-              years with external customers, the feedback was 4, 5, 5, 5, 5 on a 1-5 scale.
-            </div>
-
-
-            <div class="col-md-4 p-5 align-self-center">
-              <blockquote class="blockquote blockquote-reverse">
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                  ante.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-              </blockquote>
-
-              <blockquote class="blockquote">
-                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-                  ante.</p>
-                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite>
-                </footer>
-              </blockquote>
-              <div class="quotation westc-blue-text">
-                "Jonas deep knowledge made him the backbone of all development in the project. As a senior he also
-                assisted
-                and
-                helped other developers in the team.<br><br>As a PM I relied on Jonas in technical discussions and found
-                him
-                very
-                competent and experienced. A Solution Architect to trust and rely on."
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-12 westc-black-background text-white featurette clickable" (click)="routeTo('about')">
-    <div class="text-center clickable" (click)="routeTo('competences')">
-      <h2 class="featurette-heading">Learn more about me and the company</h2>
-      <div class="call-to-action">
-        <a routerLink="/about"><span>Read more</span></a>
-      </div>
-    </div>
-  </div>
-</div>
--->
 <section class="has-padding westc-black-background text-white featurette clickable" (click)="routeTo('about')">
   <div class="text-center clickable" (click)="routeTo('competences')">
     <h2 class="featurette-heading">Learn more about me and the company</h2>
