--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,7 +4,7 @@
 }
 
 .logo-image {
-  max-width: 250px;
+  max-height: 250px;
   padding-right: 20px;
   padding-left: 20px;
   padding-bottom: 30px;
