--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -1,5 +1,5 @@
-$west-consulting-blue : #93bfd1;
-$west-consulting-blue-darker : #7294a6;
+$west-consulting-blue : #A4C8E1; // Pantone 543C
+$west-consulting-blue-darker : #718a9b;
 $west-consulting-logo-grey : #949095;
 //$west-consulting-black-text-color : #4d4d4f;
 $west-consulting-black-text-color : #3F4D59;
