Minor text changes

--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -71,16 +71,19 @@
             Spring 4
           </li>
           <li>
+            Encryption
+          </li>
+          <li>
             Node.js
           </li>
           <li>
-            Microservice Architecture
+            Postgres
+          </li>
+          <li>
+            DynamoDB
           </li>
           <li>
             Apache Solr
-          </li>
-          <li>
-            Postgres
           </li>
           <li>
             MongoDB
@@ -90,6 +93,9 @@
           </li>
           <li>
             Gatling
+          </li>
+          <li>
+            Scripting
           </li>
         </ul>
       </div>
@@ -130,13 +136,16 @@
         <h4>Methodologies and tools</h4>
         <ul>
           <li>
+            Amazon Web Services (AWS)
+          </li>
+          <li>
+            Microservice Architecture
+          </li>
+          <li>
             SEO optimization
           </li>
           <li>
             Scrum / Kanban processes
-          </li>
-          <li>
-            Amazon Web Services (AWS)
           </li>
           <li>
             Docker
