New backgound etc

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -41,7 +41,7 @@
       </span>
       <div class="col-md-6">
         <p>
-          I enjoy booth frontend and backend technologies and test driven development in a continuous delivery manner
+          I enjoy both frontend and backend technologies and test driven development in a continuous delivery manner
           are fundamentals for me.
         </p>
         <p>
