--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -1,6 +1,6 @@
-<div class="jumbotron birds">
+<div class="jumbotron pacific">
   <div class="mt-5 fadeIn">
-    <h1>What I can do in your business</h1>
+    <h1 class="westc-text-color">What I can do in your business</h1>
   </div>
 </div>
 
@@ -39,7 +39,7 @@
 
         <h4>Fullstack Web Developer</h4>
         <p>
-          I have long experience in working as a pure developer booth in backend technologies and also in modern front
+          I have long experience in working as a pure developer both in backend technologies and also in modern front
           end technologies and I’m comfortable with the ecosystem surrounding these technologies.
         </p>
         <h4>Scrum master</h4>
@@ -71,9 +71,6 @@
             Spring 4
           </li>
           <li>
-            Encryption
-          </li>
-          <li>
             Node.js
           </li>
           <li>
@@ -81,6 +78,9 @@
           </li>
           <li>
             DynamoDB
+          </li>
+          <li>
+            Encryption
           </li>
           <li>
             Apache Solr
@@ -104,7 +104,7 @@
         <h4>Front end</h4>
         <ul>
           <li>
-            Angular 5
+            Angular 7
           </li>
           <li>
             JavaScript (ES6) / TypeScript
