--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -42,7 +42,12 @@ html {
 .map {
   background: #000 url("../../assets/map_got_bw_black.png") center center;
 }
-
+.reed {
+  background: #000 url("../../assets/banners/reed.JPG") center center;
+}
+.pacific {
+  background: #000 url("../../assets/banners/pacific_sea.jpg") center center;
+}
 .code {
   background: #000 url("../../assets/code.png") center center;
   background-size: cover;
