--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -94,7 +94,7 @@
   </div>
 </section>
 
-<section class="has-padding westc-black-background text-center clickable" (click)="routeTo('competences')">
+<section class="has-padding westc-black-background text-center clickable">
   <h2 class="featurette-heading text-white">Find out what I can do in your business</h2>
   <div class="call-to-action">
     <a routerLink="/competences"><span>Read more</span></a>
