--- a/src/app/competences/competences.component.html
+++ b/src/app/competences/competences.component.html
@@ -22,7 +22,8 @@
           </li>
           <li>
             Technical E2E responsibility for a solution, including both functional and non functional requirements.
-            It could be aligning a solution with the technical roadmap and to ensure agreed levels of performance, scalability
+            It could be aligning a solution with the technical roadmap and to ensure agreed levels of performance,
+            scalability
             and SEO are fulfilled
           </li>
           <li>
@@ -65,13 +66,19 @@
         <h4>Backend</h4>
         <ul>
           <li>
-            Java 8
+            Java 14
           </li>
           <li>
             Spring 4
           </li>
           <li>
             Node.js
+          </li>
+          <li>
+            GraphQL
+          </li>
+          <li>
+            Serverless Framework
           </li>
           <li>
             Postgres
@@ -83,19 +90,10 @@
             Encryption
           </li>
           <li>
-            Apache Solr
+            OpenShift
           </li>
           <li>
-            MongoDB
-          </li>
-          <li>
-            Oracle
-          </li>
-          <li>
-            Gatling
-          </li>
-          <li>
-            Scripting
+            ElasticSearch
           </li>
         </ul>
       </div>
@@ -104,10 +102,10 @@
         <h4>Front end</h4>
         <ul>
           <li>
-            Angular 7
+            Angular 12
           </li>
           <li>
-            JavaScript (ES6) / TypeScript
+            TypeScript
           </li>
           <li>
             HTML5
@@ -154,6 +152,9 @@
             Git
           </li>
           <li>
+            Contentful CMS
+          </li>
+           <li>
             Tridion CMS
           </li>
           <li>
@@ -168,8 +169,8 @@
   </div>
 </section>
 
-<section class="has-padding westc-black-background text-white featurette clickable" (click)="routeTo('about')">
-  <div class="text-center clickable" (click)="routeTo('competences')">
+<section class="has-padding westc-black-background text-white featurette clickable">
+  <div class="text-center clickable">
     <h2 class="featurette-heading">Learn more about me and the company</h2>
     <div class="call-to-action">
       <a routerLink="/about"><span>Read more</span></a>
