--- a/src/app/styles/_bootstrap-extensions.scss
+++ b/src/app/styles/_bootstrap-extensions.scss
@@ -27,6 +27,10 @@ html {
   background: #000 url("../../assets/banners/sea.jpg") center center;
 }
 
+.leaves {
+  background: #000 url("../../assets/leaves.jpg") center center;
+}
+
 .sunset {
   background: #000 url("../../assets/banners/sunset.jpg") center center;
 }
